[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/fonts/finished.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/chooseloadout.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 367.0
margin_bottom = 598.0
rect_min_size = Vector2( 367, 598 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 372.0
margin_bottom = 2076.0
rect_min_size = Vector2( 367, 598 )

[node name="Loadout1" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 372.0
margin_bottom = 100.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout1"

[node name="Loadout2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 372.0
margin_bottom = 204.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout2"

[node name="Loadout3" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 372.0
margin_bottom = 308.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout3"

[node name="Loadout4" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 372.0
margin_bottom = 412.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout4"

[node name="Loadout5" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 372.0
margin_bottom = 516.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout5"

[node name="Loadout6" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 520.0
margin_right = 372.0
margin_bottom = 620.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout6"

[node name="Loadout7" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 624.0
margin_right = 372.0
margin_bottom = 724.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout7"

[node name="Loadout8" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 728.0
margin_right = 372.0
margin_bottom = 828.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout8"

[node name="Loadout9" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 832.0
margin_right = 372.0
margin_bottom = 932.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout9"

[node name="Loadout10" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 936.0
margin_right = 372.0
margin_bottom = 1036.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout10"

[node name="Loadout11" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1040.0
margin_right = 372.0
margin_bottom = 1140.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout11"

[node name="Loadout12" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1144.0
margin_right = 372.0
margin_bottom = 1244.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout12"

[node name="Loadout13" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1248.0
margin_right = 372.0
margin_bottom = 1348.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout13"

[node name="Loadout14" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1352.0
margin_right = 372.0
margin_bottom = 1452.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout14"

[node name="Loadout15" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1456.0
margin_right = 372.0
margin_bottom = 1556.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout15"

[node name="Loadout16" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1560.0
margin_right = 372.0
margin_bottom = 1660.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout16"

[node name="Loadout17" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1664.0
margin_right = 372.0
margin_bottom = 1764.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout17"

[node name="Loadout18" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1768.0
margin_right = 372.0
margin_bottom = 1868.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout18"

[node name="Loadout19" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1872.0
margin_right = 372.0
margin_bottom = 1972.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout19"

[node name="Loadout20" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 1976.0
margin_right = 372.0
margin_bottom = 2076.0
rect_min_size = Vector2( 367, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Loadout20"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout1" to="." method="_on_Loadout1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout2" to="." method="_on_Loadout2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout3" to="." method="_on_Loadout3_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout4" to="." method="_on_Loadout4_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout5" to="." method="_on_Loadout5_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout6" to="." method="_on_Loadout6_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout7" to="." method="_on_Loadout7_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout8" to="." method="_on_Loadout8_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout9" to="." method="_on_Loadout9_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout10" to="." method="_on_Loadout10_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout11" to="." method="_on_Loadout11_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout12" to="." method="_on_Loadout12_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout13" to="." method="_on_Loadout13_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout14" to="." method="_on_Loadout14_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout15" to="." method="_on_Loadout15_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout16" to="." method="_on_Loadout16_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout17" to="." method="_on_Loadout17_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout18" to="." method="_on_Loadout18_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout19" to="." method="_on_Loadout19_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Loadout20" to="." method="_on_Loadout20_pressed"]
