extends Control

var spawn_loadout

func _on_Loadout1_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout1"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout2_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout2"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout3_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout3"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout4_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout4"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout5_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout5"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout6_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout6"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout7_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout7"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout8_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout8"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout9_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout9"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout10_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout10"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout11_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout11"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout12_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout12"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout13_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout13"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout14_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout14"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout15_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout15"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout16_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout16"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout17_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout17"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout18_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout18"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout19_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout19"]
	get_tree().change_scene("res://scenes/game_env.tscn")
func _on_Loadout20_pressed():
	Loadout.current_loadout = Loadout.loadouts["loadout20"]
	get_tree().change_scene("res://scenes/game_env.tscn")
